# ModelApiConsideration

applications/api/: Makefile  pyproject.toml
applications/api/src/: wsgi.py
applications/api/src/views/: routers.py
provision/environment/development/: Dockerfile  docker-compose.yaml
src/app/: app.py
src/config/: configurations.py
